[project]
name = "mundo-invest-api"
version = "0.1.0"
description = "API de gestão de clientes com integração simulada ao Pipefy"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "sqlalchemy>=2.0.0,<3.0",
    "pydantic[email]>=2.0.0,<3.0",
    "pytest>=8.0.0,<9.0",
    "httpx>=0.27.0,<1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]